--- a/index.html
+++ b/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="styles.css" />
+    <style>
+      h1{
+      color: purple;
+      }
+     </style>
     <meta charset="utf-8" />
-    <title>CSS Intro</title>
+    <title>ShakaLiv@pursuit</title>
   </head>
+  <div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
   <body>
-    <h1>Your Name Here</h1>
+    <h1>ShakaLiv@Pursuit</h1>
     <div>
       <p>
-        This is a bunch of information about myself. I'm from here and there and
-        discovered my love of programming when this happened. When I'm not
-        working I'm busy doing this and that.
+        This is a bunch of information about myself. I'm from brooklyn, Ny. I have a strong passion for audio engineering,along the way
+        discovered my love of programming, while learning about Pursuit. When I'm not
+        working I'm busy coding, researching new technology, playing the piano, chilling with my Family.
       </p>
+      <img class = "center"src="IMG_2983.jpeg"width="200" height="200">
     </div>
 
     <img
@@ -29,7 +42,7 @@
         <li>CSS3</li>
       </ul>
 
-      <ol>
+      <ol class="center">
         <h3>Libraries</h3>
         <li>React</li>
         <li>PostgreSQL</li>
@@ -42,15 +55,15 @@
       <h3>Hardest Bug So Far</h3>
       <p>
         My hardest bug I ever came across was this infinite loop I couldn't
-        escape.
+        escape called Dinoasuar Musuem.
       </p>
-      <p>I came up with a totally sick solution though by doing ...</p>
+      <p>I came up with a totally sick solution by researching , figuring out how to access 2d Arrays. And from that point my mission is to stay on top of all new material I come across. No slacking over here.</p>
     </div>
 
     <h2>Contact Me</h2>
     <div>
       Email me at:
-      <a href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a>
+      <a href="mailto:ShakaLivingstone@pursuit.org" target="_top">ShakaLivingstone@pursuit.org</a>
     </div>
 
     <ul>
