--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <ul>
       <li><a href="https://github.com/JBMontes">Github link</a></li>
-      <li><a href="www.linkedin.com/in/jeremy-b-montes">LinkedIn link</a></li>
+      <li><a href="https://www.linkedin.com/in/jeremy-b-montes/">LinkedIn link</a></li>
     </ul>
   </body>
 </html>
