intro to css lab

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>CSS Intro</title>
+    <link rel="stylesheet" href="./assets/index.css" >
   </head>
   <body>
     <h1>Your Name Here</h1>
@@ -22,7 +23,7 @@
     <div>
       <h3>Here are some of my Skills!</h3>
       <ul>
-        <h3>Languages</h3>
+        <h3 class="cup">Languages</h3>
         <li>JavaScript</li>
         <li>SQL</li>
         <li>HTML5</li>
@@ -30,7 +31,7 @@
       </ul>
 
       <ol>
-        <h3>Libraries</h3>
+        <h3 class="cup">Libraries</h3>
         <li>React</li>
         <li>PostgreSQL</li>
         <li>Node</li>
