--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <title>CSS Intro</title>
   </head>
   <body>
-    <h1>Your Name Here</h1>
-    <div>
+    <style>
+       h1 {
+      color: purple;
+      font-family: fantasy;
+         }
+      </style>
+    <h1>MPV</h1>
+  
+    <div p {
+  font-family: sans-serif;
+  font-size: 20px;
+}>
       <p>
         This is a bunch of information about myself. I'm from here and there and
         discovered my love of programming when this happened. When I'm not
@@ -19,26 +29,63 @@
       alt=""
     />
 
-    <div>
+    <div h3 {  
+  text-decoration-line: underline;  
+}  >
+      A pretty common thing to do is to center some text. This is as easy as setting a rule:
+
       <h3>Here are some of my Skills!</h3>
-      <ul>
+      <ul li {
+  color: blue;
+  background-color: light pink;
+  font-family: sans-serif;
+  font-size: 12px;
+  font-size: 1.5em;
+  text-align: center;
+  border: 1px curved red;
+  padding-left: 30px;
+}
+h3 {  
+  text-decoration-line: underline;  
+}  >
         <h3>Languages</h3>
         <li>JavaScript</li>
         <li>SQL</li>
         <li>HTML5</li>
         <li>CSS3</li>
       </ul>
-
-      <ol>
+      <ol 
+      li 
+        {
+  color: blue;
+  background-color: light pink;
+  font-family: sans-serif;
+  font-size: 12px;
+  font-size: 1.5em;
+  text-align: center;
+  font-weight: bold;
+  border: 1px curved red;
+  padding-left: 30px;
+        }>
+        <span style="font-weight: bold;">
         <h3>Libraries</h3>
         <li>React</li>
         <li>PostgreSQL</li>
         <li>Node</li>
         <li>Bootstrap</li>
+        </span>
       </ol>
     </div>
 
-    <div>
+    <div p {
+  font-family: sans-serif;
+  font-size: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+h3 {  
+  text-decoration-line: underline;  
+}  >
       <h3>Hardest Bug So Far</h3>
       <p>
         My hardest bug I ever came across was this infinite loop I couldn't
@@ -53,10 +100,37 @@
       <a href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a>
     </div>
 
-    <ul>
-      <li><a href="github.com">github link</a></li>
-      <li><a href="linkedin.com">LinkedIn link</a></li>
-      <li><a href="angellist.com">Angel list link</a></li>
-    </ul>
+   
+      <li li {
+  color: blue;
+  background-color: light pink;
+  font-family: sans-serif;
+  font-size: 12px;
+  font-size: 1.5em;
+  text-align: center;
+  border: 1px curved red;
+  padding-left: 30px;
+}><a href="github.com">github link</a></li>
+      <li li {
+  color: blue;
+  background-color: light pink;
+  font-family: sans-serif;
+  font-size: 12px;
+  font-size: 1.5em;
+  text-align: center;
+  border: 1px curved red;
+  padding-left: 30px;
+}><a href="linkedin.com">LinkedIn link</a></li>
+      <li li {
+  color: blue;
+  background-color: light pink;
+  font-family: sans-serif;
+  font-size: 12px;
+  font-size: 1.5em;
+  text-align: center;
+  border: 1px curved red;
+  padding-left: 30px;
+}><a href="angellist.com">Angel list link</a></li>
+   
   </body>
 </html>
