fiished regular tasks, now in personalizing phase

--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>CSS Intro</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>CLN STYLES</title>
   </head>
   <body>
-    <h1>Your Name Here</h1>
+    <h1>Curls Locs & Natural Styles</h1>
     <div>
       <p>
-        This is a bunch of information about myself. I'm from here and there and
-        discovered my love of programming when this happened. When I'm not
-        working I'm busy doing this and that.
+       <em> Is your hair a nightmare? We've got you over here! 👋🏽 <br/>
+        Whether you require simple regimens or some self-care - we're to pri. <br/>
+        Best of all, we come to you 🙌🏽🙌🏽
+       </em>
       </p>
     </div>
 
@@ -20,9 +22,10 @@
     />
 
     <div>
-      <h3>Here are some of my Skills!</h3>
+      <h3>Here are some of my Accomplishments!</h3>
       <ul>
         <h3>Languages</h3>
+
         <li>JavaScript</li>
         <li>SQL</li>
         <li>HTML5</li>
