--- a/index.html
+++ b/index.html
@@ -8,15 +8,32 @@
     <style>
        h1 {
       color: purple;
-      font-family: fantasy;
-         }
+      font-family: fantasy; 
+}
+         p {
+  font-family: sans-serif;
+  font-size: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+     h3 {  
+  text-decoration-line: underline;  
+}  
+    li {
+  color: blue;
+  background-color: light pink;
+  font-family: sans-serif;
+  font-size: 12px;
+  font-size: 1.5em;
+  text-align: center;
+  border: 1px curved red;
+  padding-left: 30px;
+}
+ 
       </style>
     <h1>MPV</h1>
   
-    <div p {
-  font-family: sans-serif;
-  font-size: 20px;
-}>
+    <div>
       <p>
         This is a bunch of information about myself. I'm from here and there and
         discovered my love of programming when this happened. When I'm not
@@ -29,44 +46,18 @@
       alt=""
     />
 
-    <div h3 {  
-  text-decoration-line: underline;  
-}  >
+    <div>
       A pretty common thing to do is to center some text. This is as easy as setting a rule:
 
       <h3>Here are some of my Skills!</h3>
-      <ul li {
-  color: blue;
-  background-color: light pink;
-  font-family: sans-serif;
-  font-size: 12px;
-  font-size: 1.5em;
-  text-align: center;
-  border: 1px curved red;
-  padding-left: 30px;
-}
-h3 {  
-  text-decoration-line: underline;  
-}  >
+      <ul>
         <h3>Languages</h3>
         <li>JavaScript</li>
         <li>SQL</li>
         <li>HTML5</li>
         <li>CSS3</li>
       </ul>
-      <ol 
-      li 
-        {
-  color: blue;
-  background-color: light pink;
-  font-family: sans-serif;
-  font-size: 12px;
-  font-size: 1.5em;
-  text-align: center;
-  font-weight: bold;
-  border: 1px curved red;
-  padding-left: 30px;
-        }>
+      <ol>
         <span style="font-weight: bold;">
         <h3>Libraries</h3>
         <li>React</li>
@@ -77,15 +68,7 @@ h3 {
       </ol>
     </div>
 
-    <div p {
-  font-family: sans-serif;
-  font-size: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-h3 {  
-  text-decoration-line: underline;  
-}  >
+    <div>
       <h3>Hardest Bug So Far</h3>
       <p>
         My hardest bug I ever came across was this infinite loop I couldn't
@@ -100,37 +83,11 @@ h3 {
       <a href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a>
     </div>
 
-   
-      <li li {
-  color: blue;
-  background-color: light pink;
-  font-family: sans-serif;
-  font-size: 12px;
-  font-size: 1.5em;
-  text-align: center;
-  border: 1px curved red;
-  padding-left: 30px;
-}><a href="github.com">github link</a></li>
-      <li li {
-  color: blue;
-  background-color: light pink;
-  font-family: sans-serif;
-  font-size: 12px;
-  font-size: 1.5em;
-  text-align: center;
-  border: 1px curved red;
-  padding-left: 30px;
-}><a href="linkedin.com">LinkedIn link</a></li>
-      <li li {
-  color: blue;
-  background-color: light pink;
-  font-family: sans-serif;
-  font-size: 12px;
-  font-size: 1.5em;
-  text-align: center;
-  border: 1px curved red;
-  padding-left: 30px;
-}><a href="angellist.com">Angel list link</a></li>
+   <div>
+      <p><a href="github.com">github link</a></p>
+      <p>><a href="linkedin.com">LinkedIn link</a></p>
+      <p><a href="angellist.com">Angel list link</a></p>
+      </div>
    
   </body>
 </html>
