--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      h3 {  
   text-decoration-line: underline;  
 }  
-    li {
+    ul {
   color: blue;
   background-color: light pink;
   font-family: sans-serif;
@@ -28,6 +28,19 @@
   text-align: center;
   border: 1px curved red;
   padding-left: 30px;
+}
+    ol {
+  color: blue;
+  background-color: light pink;
+  font-family: sans-serif;
+  font-size: 12px;
+  font-size: 1.5em;
+  text-align: center;
+  border: 1px curved red;
+  padding-left: 30px;
+}
+    img {
+  height: 200px;
 }
  
       </style>
