--- a/index.html
+++ b/index.html
@@ -1,49 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="styles.css" />
     <meta charset="utf-8" />
     <title>CSS Intro</title>
   </head>
   <body>
-    <style>
-       h1 {
-      color: purple;
-      font-family: fantasy; 
-}
-         p {
-  font-family: sans-serif;
-  font-size: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-     h3 {  
-  text-decoration-line: underline;  
-}  
-    ul {
-  color: blue;
-  background-color: light pink;
-  font-family: sans-serif;
-  font-size: 12px;
-  font-size: 1.5em;
-  text-align: center;
-  border: 1px curved red;
-  padding-left: 30px;
-}
-    ol {
-  color: blue;
-  background-color: light pink;
-  font-family: sans-serif;
-  font-size: 12px;
-  font-size: 1.5em;
-  text-align: center;
-  border: 1px curved red;
-  padding-left: 30px;
-}
-    img {
-  height: 200px;
-}
- 
-      </style>
     <h1>MPV</h1>
   
     <div>
