Completed extra task requirements

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   
   <body>
     <h1>Yulonda Joy Wyatt</h1>
-    <div>
-      <p>
+    <div class="text-center">
+      <p class="off-white">
         This is a bunch of information about myself. I'm from here and there and
         discovered my love of programming when this happened. When I'm not
         working I'm busy doing this and that.
@@ -42,11 +42,11 @@
 
     <div>
       <h3>Hardest Bug So Far</h3>
-      <p>
+      <p class="off-white">
         My hardest bug I ever came across was this infinite loop I couldn't
         escape.
       </p>
-      <p>I came up with a totally sick solution though by doing ...</p>
+      <p class="off-white">I came up with a totally sick solution though by doing ...</p>
     </div>
 
     <h2>Contact Me</h2>
